--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "egg-jwt": "^3.1.6",
     "egg-mongoose": "^3.2.0",
     "egg-router-plus": "^1.3.0",
+    "egg-sequelize": "^5.0.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0"
   },
